# SwiftPoll

./: .copier-answers.yml  .env.example  .gitignore  .prettierrc  Procfile  README.md  components.json  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.js
accounts/migrations/: 0001_initial.py
frontend/js/: main.tsx
frontend/js/components/: AppSidebar.tsx  DashboardLayout.tsx  DatePickerTime.tsx  Footer.tsx  Layout.tsx  ModeToggle.tsx  Nav.tsx  NavUser.tsx  PollMenu.tsx  PollOptions.tsx  PollPieChart.tsx  SearchForm.tsx  ThemeProvider.tsx  VersionSwitcher.tsx  VoteSuccessDialog.tsx
frontend/js/components/shadcn/: alert-dialog.jsx  breadcrumb.tsx  calendar.tsx  card.tsx  dialog.tsx  field.tsx  input-group.tsx  sidebar.tsx  textarea.tsx
frontend/js/hooks/: useTitle.ts
frontend/js/layouts/: DashboardLayout.tsx  Layout.tsx
frontend/js/lib/: pollColors.ts  types.ts  utils.ts
frontend/js/pages/: ConfirmEmail.tsx  Dashboard.tsx  ForgotPassword.tsx  Index.tsx  Login.tsx  PasswordResetFromKey.tsx  PollDetail.tsx  PollNotActive.tsx  PollResult.tsx  Signup.tsx
polls/: consumers.py  forms.py  models.py  routing.py  tasks.py
polls/migrations/: 0001_initial.py  0002_poll_allow_one_vote_per_ip_poll_allow_public_results.py  0003_alter_poll_options_poll_end_date_poll_start_date.py  0004_poll_is_draft_alter_poll_active.py
simple-poll/: asgi.py  celery.py  middleware.py  settings.py  settings_production.py  tests.py  urls.py  views.py  wsgi.py
templates/: base.html
templates/account/messages/: email_confirmed.txt
(+2 files in other folders)
